--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ html, body {
    font-family:'Open Sans',arial,sans-serif;
 }
 
-a {
+a :hover{
   color:#FF9966;
 }
 
@@ -164,10 +164,7 @@ padding:3px ;
 
 /* bootstrap overrides */
 
-h1,h2,h3 {
-   font-weight:800;
-   font-family:'Open Sans',arial,sans-serif;
-}
+
 
 .jumbotron {
   background-color:transparent;
@@ -216,7 +213,7 @@ small.text-muted2 {
   content: " ";
   width: 3px;
   background-color: #eeeeee;
-  left: 10%;
+  left: 0%;
   margin-left: -1.5px;
 }
 
@@ -246,7 +243,7 @@ small.text-muted2 {
 }
 
 .timeline > li > .timeline-panel {
-  width: 88%;
+  width: 98%;
   float: left;
   border: 1px solid #d4d4d4;
   border-radius: 2px;
